--- a/src/Components/RSVP/AttendanceStatus/AttendanceStatus.module.css
+++ b/src/Components/RSVP/AttendanceStatus/AttendanceStatus.module.css
@@ -74,6 +74,7 @@
   font-family: "Cutive", serif;
   font-size: 1rem;
   padding: 1rem 0 0 0;
+  word-break: break-word;
 }
 
 .modifyButton {
