--- a/src/Components/Reservation/ReservationStatus/ReservationStatus.module.css
+++ b/src/Components/Reservation/ReservationStatus/ReservationStatus.module.css
@@ -15,6 +15,7 @@
 
 .actions {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-evenly;
 }
 
