--- a/src/Components/Transportation/Transportation.module.css
+++ b/src/Components/Transportation/Transportation.module.css
@@ -55,7 +55,7 @@
 }
 
 .list {
-  padding: 0 0 0 2rem;
+  padding: 0 0 0 1.5rem;
   list-style-type: none;
   margin: 0;
   text-align: justify;
@@ -66,7 +66,7 @@
 }
 
 .list li::marker {
-  content: "🖤  ";
+  content: "❤︎  ";
   font-size: 0.9rem;
 }
 
